<?xml version="1.0"?>
<package format="2">
    <name>mm_gazebo</name>
    <version>0.0.0</version>
    <description>The mm_gazebo package</description>

    <maintainer email="vuhoi.huynh@gmail.com">Vu Hoi HUYNH</maintainer>
    <author email="vuhoi.huynh@gmail.com">Vu Hoi HUYNH</author>

    <license>TODO</license>

    <url type="website">https://https://github.com/huynhvuh/MRTA</url>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
